@@ -334,48 +334,48 @@
 
         <!-- Linux 64 位 -->
 
-        <profile>
-            <id>linux-amd64</id>
-            <activation>
-                <os>
-                    <family>Linux</family>
-                    <arch>amd64</arch>
-                </os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>io.github.fvarrui</groupId>
-                        <artifactId>javapackager</artifactId>
-                        <executions>
-                            <execution>
-                                <id>bundling-for-linux-amd64</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>package</goal>
-                                </goals>
-                                <configuration>
-                                    <platform>linux</platform>
-                                    <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>
-                                    <bundleJre>true</bundleJre>
-                                    <createTarball>true</createTarball>
-                                    <jdkPath>${env.JAVA_HOME}</jdkPath>
-                                    <linuxConfig>
-                                        <pngFile>src/main/resources/icon/redis256.png</pngFile>
-                                    </linuxConfig>
-                                    <vmArgs>
-                                        <arg>--module-path</arg>
-                                        <arg>libs</arg>
-                                        <arg>--add-modules</arg>
-                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base</arg>
-                                    </vmArgs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
+<!--        <profile>-->
+<!--            <id>linux-amd64</id>-->
+<!--            <activation>-->
+<!--                <os>-->
+<!--                    <family>Linux</family>-->
+<!--                    <arch>amd64</arch>-->
+<!--                </os>-->
+<!--            </activation>-->
+<!--            <build>-->
+<!--                <plugins>-->
+<!--                    <plugin>-->
+<!--                        <groupId>io.github.fvarrui</groupId>-->
+<!--                        <artifactId>javapackager</artifactId>-->
+<!--                        <executions>-->
+<!--                            <execution>-->
+<!--                                <id>bundling-for-linux-amd64</id>-->
+<!--                                <phase>package</phase>-->
+<!--                                <goals>-->
+<!--                                    <goal>package</goal>-->
+<!--                                </goals>-->
+<!--                                <configuration>-->
+<!--                                    <platform>linux</platform>-->
+<!--                                    <mainClass>xyz.hashdog.rdm.ui.Main</mainClass>-->
+<!--                                    <bundleJre>true</bundleJre>-->
+<!--                                    <createTarball>true</createTarball>-->
+<!--                                    <jdkPath>${env.JAVA_HOME}</jdkPath>-->
+<!--                                    <linuxConfig>-->
+<!--                                        <pngFile>src/main/resources/icon/redis256.png</pngFile>-->
+<!--                                    </linuxConfig>-->
+<!--                                    <vmArgs>-->
+<!--                                        <arg>&#45;&#45;module-path</arg>-->
+<!--                                        <arg>libs</arg>-->
+<!--                                        <arg>&#45;&#45;add-modules</arg>-->
+<!--                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.base</arg>-->
+<!--                                    </vmArgs>-->
+<!--                                </configuration>-->
+<!--                            </execution>-->
+<!--                        </executions>-->
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </build>-->
+<!--        </profile>-->
 
 
         <!-- Linux ARM 64 位 -->
